# arionkoder-efficient-data-pipeline

./: .env.sample  Dockerfile  README.md  docker-compose.yml  script_test.py  using_consumer.py
app/: main.py  pyproject.toml  settings.py
app/routes/: webhook.py
app/services/: consumer.py  publisher.py  sql_database.py  stream_process.py
